--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,8 @@
 
     <div class="hud" id="hud">
       <div class="hud-item score">
+        <div class="player-display">Player: <span id="hudPlayerName">Runner</span></div>
+        <div class="high-score-display">High Score: <span id="hudHighScoreValue">0</span></div>
         <div>Score: <span id="scoreValue">0</span></div>
         <div class="speed-display">Speed: <span id="speedValue">0</span></div>
       </div>
