Add Firebase auth UI and gate leaderboard

--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,13 @@
             </div>
           </div>
         </div>
+        <div class="auth-panel" id="authPanel">
+          <div class="auth-status" id="authStatus">Sign in to submit scores online.</div>
+          <div class="auth-buttons">
+            <button type="button" id="authSignInButton">Sign in with Google</button>
+            <button type="button" id="authSignOutButton" class="hidden">Sign out</button>
+          </div>
+        </div>
         <button id="newGameButton">New Game</button>
         <div class="overlay-note">Swipe / arrow keys / tap to control</div>
       </div>
